Changelog
=========

Version 4.10.0
--------------

Date: 2018-10-19

- Add support and testing for Django 2.1 and Python 3.7. No actual code changes
  were required.
- Add support for redis-py 3.0.
- Add touch command.


Version 4.9.1
-------------

Date: 2018-10-19

- Pin redis version to 2.10.6


Version 4.9.0
-------------

Date: 2018-03-01

- Add testing and support for Django 2.0. No actual code changes were required.
- Escape `KEY_PREFIX` and `VERSION` when used in glob expressions.
- Improve handling timeouts less than 1ms.
- Remove fakeredis support.
- Add datetime, date, time, and timedelta serialization support to the JSON
  serializer.
- The deprecated feature of passing `True` as a timeout value is no longer
  supported.
- Fix `add()` with a negative timeout to not store key (it is immediately
  invalid).
- Remove support for Django < 1.11.
- Add support for atomic incr if key is not set.


Version 4.8.0
-------------

Date: 2017-04-25

- Drop deprecated exception with typo ConnectionInterrumped. Use
  ConnectionInterrupted instead.
- Remove many workarounds related to old and not supported versions
  of django and redis-py.
- Code cleaning and flake8 compliance fixes.
- Add better impl for `close` method.
- Fix compatibility warnings with python 3.6


Version 4.7.0
-------------

Date: 2017-01-02

- Add the ability to enable write to slave when master is not available.
- Add `itersize` parameter to `delete_pattern`.


Version 4.6.0
-------------

Date: 2016-11-02

- Fix incorrect behavior of `clear()` method.


Version 4.5.0
-------------

Date: 2016-09-21

- Now only support Django 1.8 and above. Support for older versions has been dropped.
- Remove undocumented and deprecated support for old connection string format.
- Add support for `PASSWORD` option (useful when the password contains url unsafe
  characters).
- Make the package compatible with fake redis.
- Fix compatibility issues with latest django version (1.10).


Version 4.4.4
-------------
