@@ -6,18 +6,6 @@ cache: pip
 matrix:
   include:
     - env: TOXENV=lint
-    - python: 2.7
-      env: TOXENV=py27-django111-redis2
-    - python: 2.7
-      env: TOXENV=py27-django111-redislatest
-    - python: 2.7
-      env: TOXENV=py27-django111-redismaster
-    - python: 3.4
-      env: TOXENV=py34-django111-redis2
-    - python: 3.4
-      env: TOXENV=py34-django111-redislatest
-    - python: 3.4
-      env: TOXENV=py34-django111-redismaster
     - python: 3.5
       env: TOXENV=py35-django111-redis2
     - python: 3.5
@@ -30,12 +18,6 @@ matrix:
       env: TOXENV=py36-django111-redislatest
     - python: 3.6
       env: TOXENV=py36-django111-redismaster
-    - python: 3.4
-      env: TOXENV=py34-django20-redis2
-    - python: 3.4
-      env: TOXENV=py34-django20-redislatest
-    - python: 3.4
-      env: TOXENV=py34-django20-redismaster
     - python: 3.5
       env: TOXENV=py35-django20-redis2
     - python: 3.5
